# ChangeLog for dev-ruby/net-ssh
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.135 2015/06/07 18:49:20 jlec Exp $

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  11 Apr 2015; Hans de Graaff <graaff@gentoo.org> net-ssh-2.9.2.ebuild:
  Add ruby22.

  16 Mar 2015; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.4.0.ebuild:
  Cleanup.

  13 Mar 2015; Agostino Sarubbo <ago@gentoo.org> net-ssh-2.8.0.ebuild:
  Stable for ppc64, wrt bug #542200

  13 Mar 2015; Agostino Sarubbo <ago@gentoo.org> net-ssh-2.8.0.ebuild:
  Stable for ppc, wrt bug #542200

  11 Mar 2015; Agostino Sarubbo <ago@gentoo.org> net-ssh-2.8.0.ebuild:
  Stable for x86, wrt bug #542200

  11 Mar 2015; Agostino Sarubbo <ago@gentoo.org> net-ssh-2.8.0.ebuild:
  Stable for amd64, wrt bug #542200

  05 Mar 2015; Hans de Graaff <graaff@gentoo.org> -net-ssh-2.7.0-r1.ebuild,
  -net-ssh-2.9.0.ebuild:
  Cleanup.

*net-ssh-2.9.2 (11 Jan 2015)

  11 Jan 2015; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.9.2.ebuild:
  Version bump.

  03 Nov 2014; Manuel Rüger <mrueg@gentoo.org> net-ssh-2.4.0.ebuild,
  net-ssh-2.7.0-r1.ebuild, net-ssh-2.8.0.ebuild, net-ssh-2.9.0.ebuild:
  Drop jruby.

*net-ssh-2.9.0 (03 May 2014)

  03 May 2014; Hans de Graaff <graaff@gentoo.org> +net-ssh-2.9.0.ebuild:
  Version bump.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> net-ssh-2.4.0.ebuild:
  Remove ree18 and ruby18 target.

*net-ssh-2.8.0 (05 Feb 2014)

  05 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +net-ssh-2.8.0.ebuild:
  Version bump.

  22 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -net-ssh-2.7.0.ebuild:
  Cleanup old.

  22 Dec 2013; Anthony G. Basile <blueness@gentoo.org> net-ssh-2.7.0-r1.ebuild:
  Keyword ~ppc64, bug #465948

*net-ssh-2.7.0-r1 (11 Nov 2013)

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +net-ssh-2.7.0-r1.ebuild,
  -net-ssh-2.6.7.ebuild, -net-ssh-2.6.8.ebuild: