@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( virtual/ruby-ssl[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/ruby-ssl[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/ruby-ssl[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/ruby-ssl[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby19] >=dev-ruby/mocha-0.13[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby20] >=dev-ruby/mocha-0.13[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby21] >=dev-ruby/mocha-0.13[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby22] >=dev-ruby/mocha-0.13[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( doc? ( dev-ruby/rake[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) )
+DESCRIPTION=Non-interactive SSH processing in pure Ruby
+EAPI=5
+HOMEPAGE=https://github.com/net-ssh/net-ssh
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 doc test
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=ruby_targets_ruby19? ( virtual/ruby-ssl[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/ruby-ssl[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/ruby-ssl[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/ruby-ssl[ruby_targets_ruby22] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 )
+SLOT=2.6
+SRC_URI=https://github.com/net-ssh/net-ssh/archive/v2.10.0.tar.gz -> net-ssh-git-2.10.0.tgz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	ruby-fakegem	59aa129a3b9dc9e6225a0622860d2f54	ruby-ng	a1c75617b3482d513ad41d1aea8dbf8f	ruby-utils	a74e21a353442acf697b6c82e7df6df8	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=050c42d7bbd5b9eb4b9670e06ef48dd2
